Fix height issue on iOS, code cleanup

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,6 @@ html {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  min-height: 100vh;
   position: relative;
 }
 
